--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 12.x
       - name: Install nodejs dependencies
         run: |
-          yarn add
+          yarn
       - name: Run Webpack Build
         run: |
           yarn production
