--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,15 @@ jobs:
       - name: Run Webpack Build
         run: |
           yarn production
-      - name: stage, commit, fetch, push
+      - name: Commit
         run: |
           git config --local user.name "viandwi24"
           git config --local user.email "fiandwi0424@gmail.com"
-          git remote set-url origin ${{ secrets.ssh }}
-          git status
           git add .
           git commit -m "[AUTO:BUILD] build main.js"
-          git fetch origin master
-          git push origin HEAD:master
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          branch: "master"
+          repository: "test"
