--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           github_token: ${{ secrets.TOKEN }}
           branch: "master"
-          repository: "test"
+          repository: "viandwi24/test"
